[project]
name = "fastmcp-server"
version = "0.1.0"
description = "FastMCP server with PII filtering capabilities"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "uvicorn",
    "fastapi",
]

[project.scripts]
fastmcp-server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
